2018-09-05  dyuret  <dyuret@login03.kuacc.ku.edu.tr>

	* examples:
	? Knet/tutorial
	+ charlm: deprecate, in tutorial
	+ cifar10-cnn
	+ dcgan-mnist
	+ DeepLearningFrameworks: Knet.CNN example has accuracy regression.
	? dynet-benchmark
	+ fashion-mnist
	+ housing-linreg
	+ julia-tutorial: check old commands, turn into notebook.
	+ knet-tutorial: deprecate -> Knet/tutorial
	+ lenet
	+ mnist-mlp
	+ optimizers
	x overfitting: deprecate this, it is replicated in tutorial.
	? reinforcement-learning
	+ resnet
	= rnnlm: update this with new interface, check for performance regression
	+ rnn-tutorial: check for performance regression
	+ synthetic-linreg
	+ variational-autoencoder
	+ vgg

2018-08-11  Deniz Yuret  <dyuret@ku.edu.tr>

	* julia7-compat-todo:
	- fix JLD.
	- unsafe_copy! is not in base any more? fix unsafe_copy!, unsafe_convert in karray looking in base
	- unary_nd, indexed_function, isequivalent, _dbg, ssize not in AutoGrad any more.
	- fix KnetDisplay (summary line should show KnetArray) and other display/show problems.
	- separate and move KnetArray to KnetML.
	- reorganize unary.jl and broadcast.jl
	- check TODO.
	+ seed! gc dir -- just use the same names but have Knet versions.
	- data
	+ deps
	- docs
	- examples
	- prof
	+ src: CPU:20/20
	+ test: CPU:14/14
	- limit max memory allocated by kptr
	- AutoGrad only uses broadcasted now, compare performance with using broadcast
	- try making karray <: AbstractArray and overriding get/setindex.
	- search for TODOs.
	- new AutoGrad interface.
	- test on other AD and GPUarray pkgs.
	- add using LinearAlgebra: lmul!, rmul! to test/linalg.jl
	- use global keyword in the for loops in tests
	- update travis.yml (and even better add gpu testing through #312)
	- add Project.toml
	- add Manifest.toml to .gitignore
	- update readme badges
	- eventually, slim down update! and rnn gpu tests

2018-08-09  Deniz Yuret  <dyuret@ku.edu.tr>

	* broadcast: we override broadcast and broadcasted for Rec and KnetArray.